Update all loading page

--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -1,145 +1,17 @@
 {
-    "language": "Langue",
+    "home": "Accueil",
+    "language": "Language",
     "redirect_secondes": "Redirection dans {{time}} secondes",
-    "profile": "Profil",
-    "settings": "Paramètres",
-    "disconnect": "Déconnexion",
-    "connect": "Se connecter",
-    "save": "Enregistrer",
-    "success": "Succès",
-    "report": "Signaler",
     "cancel": "Annuler",
-    "notifications": "Notifications",
-    "waiting": "En attente",
-    "accepted": "Accepté",
     "download": "Télécharger",
-
-    "0": "Paramètre non valide",
-    "1": "Email ou mot de passe non valide",
-    "2": "Jeton non valide fourni",
-    "3": "Autorisations non valides",
-    "4": "Anniversaire non valide",
-    "5": "Captcha non valide",
-    "6": "Extension de fichier non valide",
-    "7": "Nom de champ non valide",
-    "8": "Longueur de champ non valide",
-    "9": "ID de demande non valide ou déjà utilisé",
-    "10": "Taille de champ non valide",
-    "11": "Nom de requête non valide",
-    "100": "Un email de vérification a été envoyé",
-    "200": "succès",
-    "204": "Supprimé avec succès",
-    "404": "Cette route API n'existe pas",
-    "505": "Echec de l'upload",
-    "1000": "Article inconnu",
-    "1001": "Utilisateur inconnu",
-    "1002": "Invitation inconnue",
-    "1003": "Message inconnu",
-    "1004": "Abonnement inconnu",
-    "1005": "Guilde inconnue",
-    "1006": "Code affiliation inconnu",
-    "1007": "Code de vérification inconnu",
-    "1008": "Impossible d'envoyer un email",
-    "1009": "Trend attaché inconnu",
-    "2000": "Trop de requêtes, veuillez réessayer dans 15 minutes",
-    "2001": "Nombre maximum de caractères atteint dans un article (1000)",
-    "2002": "Nombre maximum de caractères atteint dans un commentaire (1000)",
-    "2003": "Nombre maximum de caractères atteint dans une description (120)",
-    "3000": "Pseudo d'utilisateur déjà pris",
-    "3001": "Email d'utilisateur déjà pris",
-    "3002": "Utilisateur banni",
-    "3003": "Accès refusé, cet utilisateur vous a bloqué",
-    "3004": "Accès refusé, ce compte est privé",
-    "3005": "Ce compte n'est pas encore vérifié",
-    "4000": "Utilisateur déjà suivi",
-    "4001": "Abonnement déjà accepté",
-    "5000": "Cet utilisateur est déjà bloqué",
-    "5001": "Cet utilisateur n'est pas bloqué",
-    "6000": "Signalement déjà existant",
-    "7000": "Votre compte a été banni",
-    "8000": "Article introuvable",
-    "9000": "Trop de parties",
-    "9001": "Fichier trop volumineux",
-    "9002": "Trop de fichiers",
-    "9003": "Nom de champ trop long",
-    "9004": "Valeur de champ trop longue",
-    "9005": "Trop de champs",
-    "9006": "Champ inattendu",
-    "10000": "Nom de champ manquant",
-    "10001": "Champ de requête manquant",
-    "11000": "Erreur de type J'aime",
-    "12000": "Impossible d'ajouter un utilisateur",
-    "12001": "Impossible de créer un message direct",
-    "12002": "Impossible de fermer le message direct",
-    "13000": "Impossible de trouver ce code",
-    "13001": "Impossible d'utiliser ce code",
-    "14000": "Identifiant de l'abonnement non trouvé",
-    "14001": "Identifiant du coupon non trouvé",
-
-    "verify_fields": "Verifier que tout les champs sont bien remplis",
-    "sending_form": "Envoi du formulaire ...",
-    "different_password": "Les mots de passe sont différents",
-    "password_security": "Entrer au moins 8 caractères pour le mot de passe",
-    "email_verified": "Email vérifié avec succès",
-    "bad_file": "Choisir jusque 8 images, 1 audio ou 1 vidéo",
-    "empty": "Rien à afficher",
-
-    "already_account": "Tu as déjà un compte ?",
-    "no_account": "Pas encore enregistré ?",
-    "already_account_2" : "Déjà enregistré ?",
     "email": "Email",
     "password": "Mot de passe",
-    "repeat_password": "Confirmer le mot de passe",
-    "birthday": "Date de naissance",
-    "register": "Commence ton aventure",
-    "email_verif_link_send": "Un lien de confirmation a été envoyé a l'adresse email {{email}}",
-    "forgot_password": "Mot de passe oublié ?",
-    "human_verif": "Veuillez vérifier que vous n’êtes pas un bot",
-    "t_and_s": "Conditions d'Utilisation",
+    "connect": "Se connecter",
+    "terms_of_use": "Conditions d'utilisation",
+    "terms_of_sales": "Conditions de vente",
+    "privacy": "Politique de confidentialité",
 
-    "create_post": "Quoi de neuf ?",
-    "publish": "Publier",
-    "create_story": "...",
-    "delete": "Supprimer",
-    "pin": "Epingler",
-    "unpin": "Désépingler",
-    "pined": "épinglé",
-
-    "subscribers" : "abonnés",
-    "subscriptions": "abonnements",
-    "joined": "A rejoint",
-    "edit": "Editer le profil",
-    "bio": "Bio {{length}}/120",
-    "account": "Compte {{type}}",
-    "private": "privé",
-    "public": "public",
-    "link": "Lien",
-    "username": "Nom d'utilisateur",
-    "nickname": "Pseudo",
-    "follow": "S'abonner",
-    "unfollow": "Se désabonner",
-    "block": "Bloquer",
-
-    "my_account": "Mon compte",
-    "connexions": "Connexions",
-    "lang_and_theme": "Theme & Langue",
-    "theme": "Theme",
-    "blocked": "Compte bloqués",
-    "security": "Sécurité et confidentialité",
-    "shortcuts": "Raccourcis",
-    "patchnote": "Patchnote",
-
-    "dark_blue": "Bleu foncé",
-    "dark": "Foncé",
-    "white": "Clair",
-
-    "protect_your_data_title": "Protégez vos données",
-    "protect_your_data_description": "Vos données resteront sur notre serveur et ne seront jamais partagées avec quelqu'un d'autre, sauf si vous souhaitez vous connecter avec un tiers.",
-    "create_your_own_trender_title": "Créez votre propre tendance",
-    "create_your_own_trender_description": "Créez la tendance que vous souhaitez, il ne sera jamais facile d'être au top de la journée.",
-    "connect_to_the_blockchain_title": "Connectez-vous à la BlockChain",
-    "connect_to_the_blockchain_description": "Il est désormais possible de connecter vos portefeuilles directement à l'application et d'utiliser votre NFT partout ! Vous pouvez également discuter et créer facilement une communauté autour de votre collection.",
-    "use_it_everywhere_title": "Utilisez-le partout",
-    "use_it_everywhere_description": "IOS, Android, Web, Desktop, dans votre propre application, vous pouvez rester connecté partout et à tout moment.",
-    "ready_to_start": "Prêt à commencer ?"
-}
+    "home_title": "Trender, créez la prochaine tendance et devenez un créateur reconnu",
+    "home_description": "Trender est un réseau social gratuit conçu pour aider les créateurs à se faire reconnaître. Vous pouvez facilement créer la prochaine grande tendance et rejoindre une communauté de créateurs partageant les mêmes idées.",
+    "invite_link": "Rejoins {{username}} sur Trender"
+  }
